# 2025-koudo-b

./: .gitignore  README.md  pyproject.toml
src/: .env.sample  scraping.py  testing_case.py  tfidf.py  wc.py  withword2vec.py
src/_2025_koudo_b/: __init__.py
