[project]
name = "2025-koudo-b"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "m-tsuru", email = "147146974+m-tsuru@users.noreply.github.com" }
]
dependencies = [
    "beautifulsoup4>=4.13.4",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "types-requests>=2.32.0.20250515",
    "matplotlib>=3.10.3",
    "wordcloud>=1.9.4",
    "pandas>=2.2.3",
    "networkx>=3.4.2",
    "mecab>=0.996.11",
    "nltk>=3.9.1",
    "pyvis>=0.3.2",
    "scikit-learn>=1.6.1",
    "gensim>=4.3.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=25.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
